<resources>
    <string name="app_name">GoRetails</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">GoRetails</string>
    <string name="menu_account">Account</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_fruits">Fruits</string>
    <string name="menu_Vegetables">Vegetables</string>
    <string name="menu_grocery">Grocery</string>
    <string name="menu_dairy">Dairy Products</string>
    <string name="menu_seasonal_fruits">Seasonal Fruits</string>

    <string name="home_second">Home Second</string>
</resources>
