<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.goretails.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.goretails.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_account"
        android:name="com.goretails.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.goretails.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fruits"
        android:name="com.goretails.FruitsFragment"
        android:label="@string/menu_fruits"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_vegetables"
        android:name="com.goretails.VegetablesFragment"
        android:label="@string/menu_Vegetables"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_grocery"
        android:name="com.goretails.GroceryFragment"
        android:label="@string/menu_grocery"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dairy_products"
        android:name="com.goretails.DairyProductsFragment"
        android:label="@string/menu_dairy"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_seasonal_fruits"
        android:name="com.goretails.SeasonalFruitsFragment"
        android:label="@string/menu_seasonal_fruits"
        tools:layout="@layout/fragment_home" />
</navigation>