<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:title="@string/menu_account" />
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shop"
            android:title="@string/menu_shop" />
    </group>
    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fruits"
            android:title="Fruits"/>
    </group>
    <group
        android:id="@+id/group5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vegetables"
            android:title="Vegetables"/>
    </group>
    <group
        android:id="@+id/group6"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_grocery"
            android:title="Grocery"/>
    </group>
    <group
        android:id="@+id/group7"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dairy_products"
            android:title="Dairy products"/>
    </group>
    <group
        android:id="@+id/group8"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_seasonal_fruits"
            android:title="Seasonal fruits"/>
    </group>
</menu>
